# enschema

./: .gitignore  README.md  pyproject.toml
enschema/: __init__.py
tests/: test_classes.py  test_merge.py
