[tool.poetry]
name = "enschema"
version = "0.1.0"
description = ""
authors = ["Martin Baláž <martin.balaz@trojsten.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
schema = "^0.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
